Updated application.properties to have postgres data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,9 +19,9 @@
 #PostgreSQL stuff
 
 # Database connection
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:postgresql://dpg-cvsu48qd450c73d97rlg-a:5432/cyberquest_db_tcgo
+spring.datasource.username=cyberquest_db_tcgo_user
+spring.datasource.password=lVkHwl2zfBpjq5NAv3VE4cj0nUCQDalb
 
 # JPA/Hibernate settings
 spring.jpa.hibernate.ddl-auto=update
