--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@
 #PostgreSQL stuff
 
 # Database connection
-spring.datasource.url=postgresql://cyberquest_db_tcgo_user:lVkHwl2zfBpjq5NAv3VE4cj0nUCQDalb@dpg-cvsu48q4d50c73d97rlg-a/cyberquest_db_tcgo
+spring.datasource.url=jdbc:postgresql://cyberquest_db_tcgo_user:lVkHwl2zfBpjq5NAv3VE4cj0nUCQDalb@dpg-cvsu48q4d50c73d97rlg-a/cyberquest_db_tcgo
 spring.datasource.username=cyberquest_db_tcgo_user
 spring.datasource.password=lVkHwl2zfBpjq5NAv3VE4cj0nUCQDalb
 
