--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 #MySQL stuff
+server.port=8080
 
 # === DATABASE CONFIGURATION ===
 #spring.datasource.url=jdbc:mysql://127.0.0.1:1600/cyberquest
@@ -26,4 +27,3 @@ spring.datasource.password=lVkHwl2zfBpjq5NAv3VE4cj0nUCQDalb
 # JPA/Hibernate settings
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
